# workmate_test

./: .gitignore  README.md  main.ipynb  pyproject.toml
.github/workflows/: coverage.yml  flake8.yml  tests.yml
src/csv_printer/: __init__.py  __main__.py  aggregations.py  cli.py  main.py  printer.py  reader.py
tests/: conftest.py  test_cli.py
tests/aggregations/: test_operations.py
tests/printer/: fixtures.py  test_simple.py
tests/reader/: fixtures.py  test_simple.py
