[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/csv_printer"
]


[project]
name = "temp"
version = "0.1.1"
description = "Пакет для обработки .csv файлов экзамена"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mgost = "csv_printer:main"

[dependency-groups]
tests = [
    "coverage>=7.11.0",
    "flake8>=7.3.0",
    "pytest-asyncio>=1.2.0",
    "respx>=0.22.0",
]

[tool.isort]
multi_line_output = 5
