[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/csv_printer"
]


[project]
name = "temp"
version = "0.3.1"
description = "Пакет для обработки .csv файлов экзамена"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mgost = "csv_printer:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "coverage>=7.11.0",
  "flake8>=7.3.0"
]

[tool.isort]
multi_line_output = 5
